--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="please_sign_in_to_proceed">Please sign in to proceed:</string>
     <string name="hint1">Username/ Email</string>
     <string name="hint2">Password</string>
+    <string name="hint3">Re-enter Password</string>
     <string name="explain_equation">Explain equation?</string>
     <string-array name="outer_parameter">
         <item>mm</item>
@@ -27,4 +28,6 @@
     <string name="wire_diameter">Wire diameter (d)</string>
     <string name="enter_value">enter value</string>
     <string name="dont_have_account_yet"><u>Don\'t have account yet?</u></string>
+    <string name="please_sign_up_to_create_account">Please sign up to create account:</string>
+    <string name="already_have_account"><u>Already have account?</u></string>
 </resources>
